--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -8,7 +8,7 @@ env:
   SYSDIG_URL: https://app.au1.sysdig.com
   REGISTRY: ghcr.io
   IMAGE_NAME: ${{ github.repository }}
-  BYPASS_SCAN_FAIL: true
+  BYPASS_SCAN_FAIL: false
 
 jobs:
   build:
