--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,6 +20,10 @@ jobs:
     
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }} --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+
+    - name: Build the Docker image with a second package name
+      run: docker build . --file Dockerfile --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}2:${{ github.run_number }} --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}2:latest
+    
     
     - name: Sysdig Secure Inline Scan - New
       run: |
@@ -32,3 +36,5 @@ jobs:
     
     - name: Push the Docker image
       run: docker push -a ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+    - name: Push the Docker image
+      run: docker push -a ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}2
