--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,13 @@ jobs:
 
     - name: Build the Docker image with a second package name
       run: docker build . --file Dockerfile --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}2:${{ github.run_number }} --tag ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}2:latest
-    
+
+    - name: Scan image
+      id: scan
+      uses: sysdiglabs/scan-action@v5
+      with:
+          image-tag: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
+          sysdig-secure-token: ${{ secrets.SECURE_API_TOKEN }}
     
     - name: Sysdig Secure Inline Scan - New
       run: |
