--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -30,6 +30,12 @@ jobs:
       with:
           image-tag: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ github.run_number }}
           sysdig-secure-token: ${{ secrets.SECURE_API_TOKEN }}
+
+    - name: Upload SARIF file
+      if: success() || failure() 
+      uses: github/codeql-action/upload-sarif@v3
+      with:
+        sarif_file: ${{ github.workspace }}/sarif.json
     
     - name: Sysdig Secure Inline Scan - New
       run: |
